Business lite Changelog

****************************

Version 3.1.4 (05-23-12)
-Added Danish language files.
-Added Catalan language files.

Version 3.1.3 (05-16-12)
-Added option for responsive embeded videos (Youtube/Vimeo).
-Added Polish language files. 

Version 3.1.2 (05-09-12)
-Added Spanish, Italian, Turkish and Persian language files. 
-Updated Swedish translation files. 
-Updated business.pot
-Fixed/added missing translation wrappers to post pagination function.

Version 3.1.1 (05-01-12)
-Mobile Menu now works in phone landscape mode. 
-Fixed bug with broken "next" link in pagination.
-Added Swedish and Russian language files.

Version 3.1 (04-24-12)
-Added missing $content_width global to theme setup function.
-Updated pagination function with missing translation functions.
-Updated business.pot.
-Added Pinterest social icon option.

Version 3.0.9 (04-17-12)
-Removed ereg_replace from Google Font code for PHP 5.3 compatibility. 
-Re-added IE Quirks fix. 
-Removed several unnecessary options from theme options.
-Removed some unused translation functions.

Version 3.0.8 (04-10-12)
-Added Hebrew language files.
-Subheader responsive CSS tweak.
-Fixed slider arrows not displaying until settings saved.

Version 3.0.7 (04-03-12)
-Fixed text bug related to previous "Read more" fix. 

Version 3.0.6 (04-03-12)
-Unidentified index error fix for meta box code. 
-Added Romanian language files.
-Updated business.pot.
-Changed <!--more--> link text to "Read more…".
-Removed height: auto from objects.
-Fixed bug with archive of an empty category.
-Adjusted "viewport" initial scale for full-width mobile device view.  

Version 3.0.5 (03-28-12)
-Fixed default slide image proportion. 
-Fix for Google Font library call for SSL compatibility. 
-Cleaned up some translation functions.
-Updated business.pot.
-Added Croatian language files.

Version 3.0.4 (03-22-12)
-Fixed blank space in licensing folder name causing update issues.
-Removed link underlines from post byline.