@@ -5,6 +5,7 @@ Business lite Changelog
 Version 3.1.4 (05-23-12)
 -Added Danish language files.
 -Added Catalan language files.
+-Added function to update RSS link in HTML 'head' with custom feed.
 
 Version 3.1.3 (05-16-12)
 -Added option for responsive embeded videos (Youtube/Vimeo).
